# otim

./: .gitignore  Cargo.toml  output.txt  tester.bat  tst.in
generateRuns/: Cargo.toml  run.sh  run2.sh
generateRuns/src/: main.rs
scripts/: parser.ipynb  parser.py
small/: 10_1.in  12_1.in  15_1.in
src/: highs_solver.rs  input_parser.rs  main.rs  scheduling.rs  scheduling_lean.rs  simulated_annealing.rs
trsp/: Readme
