[package]
name = "otim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
good_lp = { version = "1.4.1" } #features = ["lp-solvers"], default-features = false }
itertools = "0.11.0"
rand = "0.8.5"
rayon = "1.7.0"
